RegAligner Change History

*** upcoming release (1.2?) ***
- implemented count collection from HMM
- added nondeficient mode for IBM-3/4 (as in [Schoenemann, ACL 2013])
- added IBM-5
- refined handling of counts too close to 0
- made some alternative word class modes available on command line
- added alternative projection routine with better worst case complexity (no
  speed-ups in practice)
- major bugfix for IBM-3/4 regarding p0 count collection (for EM)
- some minor fixes and refinements, including speed-up of ICM by using log
  lookup tables and grouping of common code patterns, plus when converting general
  alignments to satisfy the fertility constraints of IBM-3/4/5
- run running IBM-3 and IBM-4 by default

*** release version 1.05 (released March 6 2013) ***
- two bugfixes for IBM-4
- major correction for word classes: now actually implementing the dependence
  of [Brown et al. 93]
- streamlining of the source code for IBM-3 and IBM-4

*** release version 1.02 (released on December 29 2012) ***
- improved Makefile (more compatible now)
- small fix for IBM-4 dev alignment computation
- restructured and added option -max-lookup <uint> to save memory (at the cost of run time)
- revised initialization of p0 for IBM-3/4 from HMM
- revised strategy for word classes in IBM-4 regarding run-time and memory

*** release version 1.0 (released on December 09 2012) ***
- parameterization of HMM now selectable on command line, plus added some variants
- added options to the IBM-3: 
  probability for empty word can now be fixed on command line, the original empty word of Brown et al. can be used
  and nonparametric distortion models can be used
- added options to the IBM-4:
  + (like in the IBM-3) probability for empty word can now be fixed and the original empty word of Brown et al. can be used
  + option to use a more deficient variant (according to Brown et al.)
- IBM-4 now implements word classes
- speed-up for Viterbi computation of HMM with reduced parameterization