@@ -87,14 +87,6 @@ run-time of IBM-1 and HMM by adding the option
 to the command line. You will then no longer see an energy printout after
 every iteration.
 
-If you want to speed-up the IBM-4 (and reduce its memory consumption), add 
-the option 
-
--dont-reduce-deficiency
-
-to the command line. The results will not be equivalent, but may well be very 
-similar (the implementation is then closer to GIZA++).
-
 
 If you want to reduce memory consumption, add 
 
@@ -129,7 +121,7 @@ to the command line. IBM-5 will ignore target classes.
 CAUTION: the required format differs from GIZA++. Use the program cls2rac 
 included in this compilation to convert files generated by mkcls to the required format.
 
-***** Using nondeficient variants of IBM-3 and IBM-4 ******
+***** Using nondeficient and reduced deficient variants of IBM-3 and IBM-4 ******
 
 if you want to use the nondeficient variants of IBM-3 and IBM-4 as in 
 [Schoenemann, ACL 2013], add
@@ -137,6 +129,14 @@ if you want to use the nondeficient variants of IBM-3 and IBM-4 as in
 -nondeficient
 
 to the command line options
+
+If you want to merely reduce deficiency as in the paper, add
+
+-reduce-deficiency 
+
+to the command line. The run times and the memory consumption will be much
+ higher than in normal mode (at least if you use word classes), but still much
+ less than in nondeficient mode
 
 ***** Evaluating on gold alignments for the training set ****
 
